5report/5/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | arith_expr EQ arith_expr
   6       | arith_expr LT arith_expr
   7       | boolian_expr

   8  boolian_expr : boolian_expr OR factor2_expr
   9               | factor2_expr

  10  factor2_expr : factor2_expr AND arith_expr
  11               | arith_expr

  12  arith_expr : arith_expr PLUS factor_expr
  13             | arith_expr MINUS factor_expr
  14             | factor_expr

  15  factor_expr : factor_expr TIMES atomic_expr
  16              | factor_expr DIV atomic_expr
  17              | atomic_expr

  18  atomic_expr : INT
  19              | BOOL
  20              | ID
  21              | LPAR expr RPAR

  22  var : ID

  23  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	expr  goto 10
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (18)

	.  reduce 18


state 4
	atomic_expr : BOOL .  (19)

	.  reduce 19


state 5
	atomic_expr : ID .  (20)

	.  reduce 20


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 17


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 19
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 8
	atomic_expr : LPAR . expr RPAR  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 20
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 9
	%entry% : '\001' toplevel .  (23)

	.  reduce 23


state 10
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 21
	.  error


state 11
	expr : arith_expr . EQ arith_expr  (5)
	expr : arith_expr . LT arith_expr  (6)
	factor2_expr : arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 22
	MINUS  shift 23
	EQ  shift 24
	LT  shift 25
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11
	AND  reduce 11
	OR  reduce 11


state 12
	expr : boolian_expr .  (7)
	boolian_expr : boolian_expr . OR factor2_expr  (8)

	OR  shift 26
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 13
	boolian_expr : factor2_expr .  (9)
	factor2_expr : factor2_expr . AND arith_expr  (10)

	AND  shift 27
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9
	OR  reduce 9


state 14
	arith_expr : factor_expr .  (14)
	factor_expr : factor_expr . TIMES atomic_expr  (15)
	factor_expr : factor_expr . DIV atomic_expr  (16)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14
	AND  reduce 14
	OR  reduce 14


state 15
	factor_expr : atomic_expr .  (17)

	.  reduce 17


state 16
	var : ID .  (22)

	.  reduce 22


state 17
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 30
	.  error


state 18
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 31


state 19
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 32
	.  error


state 20
	atomic_expr : LPAR expr . RPAR  (21)

	RPAR  shift 33
	.  error


state 21
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 22
	arith_expr : arith_expr PLUS . factor_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 34
	atomic_expr  goto 15


state 23
	arith_expr : arith_expr MINUS . factor_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 35
	atomic_expr  goto 15


state 24
	expr : arith_expr EQ . arith_expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 36
	factor_expr  goto 14
	atomic_expr  goto 15


state 25
	expr : arith_expr LT . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 37
	factor_expr  goto 14
	atomic_expr  goto 15


state 26
	boolian_expr : boolian_expr OR . factor2_expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 38
	factor2_expr  goto 39
	factor_expr  goto 14
	atomic_expr  goto 15


state 27
	factor2_expr : factor2_expr AND . arith_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 40
	factor_expr  goto 14
	atomic_expr  goto 15


state 28
	factor_expr : factor_expr TIMES . atomic_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 41


state 29
	factor_expr : factor_expr DIV . atomic_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 42


state 30
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 43
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 31
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 44
	.  error


state 32
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 45
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 33
	atomic_expr : LPAR expr RPAR .  (21)

	.  reduce 21


state 34
	arith_expr : arith_expr PLUS factor_expr .  (12)
	factor_expr : factor_expr . TIMES atomic_expr  (15)
	factor_expr : factor_expr . DIV atomic_expr  (16)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12
	AND  reduce 12
	OR  reduce 12


state 35
	arith_expr : arith_expr MINUS factor_expr .  (13)
	factor_expr : factor_expr . TIMES atomic_expr  (15)
	factor_expr : factor_expr . DIV atomic_expr  (16)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13
	AND  reduce 13
	OR  reduce 13


state 36
	expr : arith_expr EQ arith_expr .  (5)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	SEMISEMI  reduce 5


state 37
	expr : arith_expr LT arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 38
	factor2_expr : arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11
	AND  reduce 11
	OR  reduce 11


state 39
	boolian_expr : boolian_expr OR factor2_expr .  (8)
	factor2_expr : factor2_expr . AND arith_expr  (10)

	AND  shift 27
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8
	OR  reduce 8


state 40
	factor2_expr : factor2_expr AND arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10
	AND  reduce 10
	OR  reduce 10


state 41
	factor_expr : factor_expr TIMES atomic_expr .  (15)

	.  reduce 15


state 42
	factor_expr : factor_expr DIV atomic_expr .  (16)

	.  reduce 16


state 43
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 46
	SEMISEMI  shift 47
	.  error


state 44
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 48
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 45
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 49
	.  error


state 46
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 50
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 47
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 48
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 46
	.  error


state 49
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 51
	arith_expr  goto 11
	boolian_expr  goto 12
	factor2_expr  goto 13
	factor_expr  goto 14
	atomic_expr  goto 15


state 50
	expr : LET var EQ expr IN expr .  (3)

	.  reduce 3


state 51
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


22 terminals, 10 nonterminals
24 grammar rules, 52 states
